<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.example.rishabh.myapplication.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="256px">

            <TextView
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingTop="33dp"
                android:text="Welcome SJSU Students! "
                android:textAllCaps="false"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/imageView"
                android:contentDescription="@string/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"

                android:scaleX="2.5"
                android:scaleY="2.5"
                app:srcCompat="@mipmap/ic_launcher_foreground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="1dp"
            android:layout_marginTop="50dp"
            android:layout_height="110dp">



            <RelativeLayout
                android:layoutMode="clipBounds"
                android:layout_width="wrap_content"
                android:paddingTop="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingLeft="10dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="4"
                        android:text="@string/sjsu_id"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/text_id_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="4"
                        android:text="@string/password"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/text_password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textSize="12sp" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.6"
                android:clipChildren="true">

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="75dp"
                    android:layout_height="44dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/login" />
            </RelativeLayout>


        </LinearLayout>




        <TextView
            android:layout_marginTop="100dp"
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New User?" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sign up" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
